--- a/index.html
+++ b/index.html
@@ -288,6 +288,10 @@
                 grid-template-columns: 1fr;
             }
         }
+
+        a {
+            text-decoration: none;
+        }
     </style>
 </head>
 
@@ -313,12 +317,25 @@
                 <h3>Menu</h3>
                 <p>Explore our premium coffee selections</p>
             </a>
-
+            
             <!-- Instagram Card -->
             <a href="https://www.instagram.com/espresso_iq_dhk" class="card">
                 <i class="bi bi-instagram"></i>
                 <h3>Instagram</h3>
                 <p>Follow us for latest updates</p>
+            </a>
+
+            <!-- snap Cards -->
+            <a href="https://www.snapchat.com/add/espresso_duhok" class="card">
+                <i class="bi bi-snapchat"></i>
+                <h3>Snapchat</h3>
+                <p>Connect with us on Snapchat</p>
+            </a>
+            
+            <a href="mailto:@email.com" class="card">
+                <i class="bi bi-envelope"></i>
+                <h3>Email</h3>
+                <p>placeholder@gmail.com</p>
             </a>
 
             <!-- WhatsApp Cards -->
@@ -328,12 +345,6 @@
                 <p>+964 750 000 0000</p>
             </div>
 
-            <div class="card whatsapp-card" data-number="+9647500000001">
-                <i class="bi bi-whatsapp"></i>
-                <h3>WhatsApp 2</h3>
-                <p>+964 750 000 0001</p>
-            </div>
-
             <!-- Phone Cards -->
             <div class="card phone-card" data-number="+9647500000000">
                 <i class="bi bi-telephone"></i>
@@ -341,29 +352,26 @@
                 <p>+964 750 000 0000</p>
             </div>
 
+            <div class="card" id="location">
+                    <i class="bi bi-geo-alt-fill"></i>
+                    <h3>Our Location</h3>
+                    <p>Iraq, Duhok - Anwer mayi Road<br>Opposite kurdnaft Oil</p>
+                </div>
+
+            <div class="card whatsapp-card" data-number="+9647500000001">
+                <i class="bi bi-whatsapp"></i>
+                <h3>WhatsApp 2</h3>
+                <p>+964 750 000 0001</p>
+            </div>
+
+
             <div class="card phone-card" data-number="+9647500000001">
                 <i class="bi bi-telephone"></i>
                 <h3>Phone 2</h3>
                 <p>+964 750 000 0001</p>
             </div>
 
-            <!-- Other Cards -->
-            <a href="https://www.snapchat.com/add/espresso_duhok" class="card">
-                <i class="bi bi-snapchat"></i>
-                <h3>Snapchat</h3>
-                <p>Connect with us on Snapchat</p>
-            </a>
 
-            <a href="mailto:@email.com" class="card">
-                <i class="bi bi-envelope"></i>
-                <h3>Email</h3>
-                <p>placeholder@gmail.com</p>
-            </a>
-            <div class="card" id="location">
-                    <i class="bi bi-geo-alt-fill"></i>
-                    <h3>Our Location</h3>
-                    <p>Iraq, Duhok - Anwer mayi Road<br>Opposite kurdnaft Oil</p>
-                </div>
         </div>
 
         <div class="map-container">
